--- a/2023/12/Cargo.toml
+++ b/2023/12/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indicatif = { version = "0.17.7", features = ["rayon"] }
 rayon = "1.8.0"
 strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
 
